// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Menu Menu with avatar and different button colour 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #28283e;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3:hover {
  background-color: #3c3c5d;
}

.emotion-3:active {
  background-color: #50507c;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #fff;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #fff;
}

.emotion-26 {
  fill: #000;
  width: 1.125rem;
  height: 1.125rem;
}

.emotion-26 path {
  fill: #000;
}

.emotion-32 {
  font-size: 1rem;
  font-weight: 500;
  color: #000;
  background-color: #e7ebf2;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-32:hover {
  background-color: #c6cfe0;
}

.emotion-32:active {
  background-color: #a5b4ce;
}

.emotion-35 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  background: #1DE9B6;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
}

.emotion-35 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-41 {
  fill: #000;
  width: 1rem;
  height: 1rem;
}

.emotion-41 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  TC
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <img
                    src="https://material-ui.com/static/images/avatar/1.jpg"
                  />
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-26"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-32"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-35"
                >
                  
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-26"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-41"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with option icon and different colour 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #28283e;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3:hover {
  background-color: #3c3c5d;
}

.emotion-3:active {
  background-color: #50507c;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 1.125rem;
  height: 1.125rem;
}

.emotion-8 path {
  fill: #000;
}

.emotion-9 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-12 {
  fill: #fff;
  width: 1rem;
  height: 1rem;
}

.emotion-12 path {
  fill: #fff;
}

.emotion-14 {
  font-size: 1rem;
  font-weight: 500;
  color: #000;
  background-color: #d6d6db;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-14:hover {
  background-color: #bbbbc3;
}

.emotion-14:active {
  background-color: #a0a0ab;
}

.emotion-23 {
  fill: #000;
  width: 1rem;
  height: 1rem;
}

.emotion-23 path {
  fill: #000;
}

.emotion-25 {
  font-size: 1rem;
  font-weight: 500;
  color: #28283e;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(40,40,62,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-25:hover {
  background-color: rgba(40,40,62,0.1);
}

.emotion-25:active {
  background-color: rgba(40,40,62,0.2);
}

.emotion-34 {
  fill: #28283e;
  width: 1rem;
  height: 1rem;
}

.emotion-34 path {
  fill: #28283e;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-9"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-14"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-9"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-23"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-25"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-9"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-34"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with selection handler 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #4945EE;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background-color: #1b16ea;
}

.emotion-2:active {
  background-color: #1511bc;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div>
      Selected: 
      <b>
        -
      </b>
    </div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span>
                More
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
